orderstyle.css
:root {
  --mint-green: #a4ccc6;
  --white: #ffffff;
}

#title, h2 {
  text-align: center;
  font-family: "Quicksand", sans-serif;
}
body,
footer,
header {
  margin: 0px;
}

.card {
  display: flex;
  flex-direction: column;
  width: 30%;
  height: auto;
  border: 2px solid gainsboro;
}
.card img {
  width: -webkit-fill-available;
  height: auto;
}
#cardsCollection {
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1em;
  margin: 0 10%;
}
footer h1 {
  background-color: #a4ccc6;
  margin: 0px;
  text-align: center;
}
header {
  background-color: #a4ccc6;
}

.orderCardSection {
  padding: 0px;
  margin: 0px;
  display: flex;
}

.orderCardSection button {
  border: none;
  color: white;
  padding: 8px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  margin: 0px;
  cursor: pointer;
  background-color: white;
  color: black;
  border: 1.5px solid #a4ccc6;
  width: 100%;
}
.orderCardSection button:hover {
  background-color: #a4ccc6;
  color: white;
}

